--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,21 @@
     <artifactId>spring-security-taglibs</artifactId>
     <version>4.2.3.RELEASE</version>
 </dependency>
+
+
+<dependency>
+  <groupId>org.thymeleaf</groupId>
+  <artifactId>thymeleaf</artifactId>
+  <version>3.0.0.RELEASE</version>
+</dependency>
+<dependency>
+  <groupId>org.thymeleaf</groupId>
+  <artifactId>thymeleaf-spring4</artifactId>
+  <version>3.0.0.RELEASE</version>
+</dependency>
+
+
+
 	</dependencies>
 
 	<build>
